SequenceTarget/target/classes/META-INF/fabric8/openshift/camel-ose-springboot-xml-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 0f06f3708077d6980d14eaec2e91440fb132f66a
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: LargeMessages-Jaxb-working
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=camel-ose-springboot-xml&var-version=1.0.0-SNAPSHOT
  labels:
    app: camel-ose-springboot-xml
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: camel-ose-springboot-xml
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: camel-ose-springboot-xml
    provider: fabric8
    group: org.mycompany
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 0f06f3708077d6980d14eaec2e91440fb132f66a
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/git-branch: LargeMessages-Jaxb-working
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=camel-ose-springboot-xml&var-version=1.0.0-SNAPSHOT
      labels:
        app: camel-ose-springboot-xml
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: org.mycompany
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"tomcat":{"max-threads":1}}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: mycompany/camel-ose-springboot-xml:snapshot-181007-115455-0600
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
          requests:
            cpu: "0.2"
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
