SequenceTarget/target/classes/META-INF/fabric8/openshift/camel-ose-springboot-xml-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 0f06f3708077d6980d14eaec2e91440fb132f66a
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: LargeMessages-Jaxb-working
    prometheus.io/scrape: "true"
    prometheus.io/port: "9779"
  labels:
    expose: "true"
    app: camel-ose-springboot-xml
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: camel-ose-springboot-xml
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: camel-ose-springboot-xml
    provider: fabric8
    group: org.mycompany
