SequenceTarget/target/classes/META-INF/fabric8/openshift/sequence-consumer-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: Sequence-Consumer
    provider: fabric8
    version: "1.0"
    group: org.mycompany
  name: sequence-consumer
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: sequence-consumer
